# mpfr-feedstock

./: .travis.yml  README.md  appveyor.yml  conda-forge.yml
recipe/: CMakeLists.txt  bld.bat  build.sh  meta.yaml
